--- a/TestMVCProject/Views/Home/Index.cshtml
+++ b/TestMVCProject/Views/Home/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome @Model.name this is @Model.datetime </h1>
+    <h1 class="display-4">Welcome @Model.Name this is @Model.Date </h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
