--- a/BookList/BookList/Pages/BookList/Index.cshtml
+++ b/BookList/BookList/Pages/BookList/Index.cshtml
@@ -8,6 +8,48 @@
         <h2 class="text-info">Book Info</h2>
     </div>
     <div class="col-3">
-        <a class="btn btn-info form-control">Create New Book</a>  
+        <a asp-page="Create" class="btn btn-info form-control text-white">Create New Book</a>
     </div>
+
+    <div class="col-12 border p-3 mt-3">
+        <form method="post">
+            @if (Model.Books.Count() > 0)
+            {
+                <table class="table table-striped border">
+                    <tr class="table-secondary">
+                        <th>
+                            <label asp-for="Books.FirstOrDefault().Name"></label>
+                        </th>
+                        <th>
+                            <label asp-for="Books.FirstOrDefault().Author"></label>
+                        </th>
+                        <th>
+
+                        </th>
+                    </tr>
+                    @foreach (var item in Model.Books)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(m => item.Name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(m => item.Author)
+                            </td>
+                            <td>
+                                <button class="btn btn-danger btn-sm">Delete</button>
+                                <a class="btn btn-success btn-sm">Edit</a> 
+                            </td>
+                        </tr>
+                    }
+                </table>
+
+            }
+            else
+            {
+                <p> No Books found </p>
+            }
+        </form>
+    </div>
+
 </div>
