--- a/BookList/BookList/Pages/BookList/Index.cshtml
+++ b/BookList/BookList/Pages/BookList/Index.cshtml
@@ -43,7 +43,7 @@
                         @Html.DisplayFor(m => item.ISBN)
                     </td>
                     <td>
-                        <button class="btn btn-danger btn-sm">Delete</button>
+                        <button asp-page-handler="Delete" asp-route-id="@item.Id" onclick="return confirm('Are you sure delete this Book?')" class="btn btn-danger btn-sm">Delete</button>
                         <a asp-page ="Edit" asp-route-id="@item.Id" class="btn btn-success btn-sm">Edit</a>
                     </td>
                 </tr>
